--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Artifact #4</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
@@ -82,6 +83,9 @@
       <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" />
     </a>
   </footer>
+   
+            <script src="index.js"></script>
+    </script> 
 </body>
 
 </html>
